src/test/ui/E0596.ast.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/E0596.rs:6:18
   |
LL |     let x = 1;
   |         - help: make this binding mutable: `mut x`
LL |     let y = &mut x; //[ast]~ ERROR [E0596]
   |                  ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
